--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
     "vite": "^4.3.9",
+    "vite-plugin-node": "^3.0.2",
     "vite-plugin-react": "^4.0.1"
   }
 }
